argoprojects/argocd-ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-route
spec:
  parentRefs:
    - name: cicd
  rules:
    - matches:
        - path:
            type: Exact
            value: /argocd
      backendRefs:
        - name: argocd
          port: 9080
