argoprojects/nginx.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nginx-route
spec:
  parentRefs:
    - name: cicd-gateway
  hostnames: ["cicd.ajeet.io"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /nginx
      backendRefs:
        - name: nginx-service
          port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "100m"
              memory: "256Mi"
            requests:
              cpu: "50m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: nginx
